--- a/pages/form.html
+++ b/pages/form.html
@@ -1,61 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <!-- Agrega los enlaces a los archivos CSS y JavaScript de Bootstrap -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../css/style.css">
+  <title>Formulario</title>
 </head>
 <body>
-<!-- Navigation Bar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#resNav">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a id="form-img" href="./form.html" class="navbar-brand"><img src="../file/logo/cropped-logo_oficial_transparente.png" alt=""></a>
-  </div>
-  <div class="collapse navbar-collapse" id="resNav">
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Team</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </div>
-</nav>  <!-- End of Navigation Bar -->
-
-<!-- Jumbotron -->
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="jumbotron">
-        <h1>Hello World!</h1>
-        <p class="lead">Some simple text so you can see how awesome i am.</p>
-        <button type="btn" class="btn btn-primary">Click me!</button>
+  <div class="container">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+      <div class="col-md-3 mb-2 mb-md-0">
+        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+          <img src="../file/logo/cropped-logo_oficial_transparente.png" class="bi" width="70" height="60" aria-label="Logo majada" alt="">
+        </a>
       </div>
-    </div>
-  </div>
-</div>  <!-- End of Jumbotron -->
-
-<!-- Simple Article -->
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="text-center">
-        <h3>Simple article</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      <p>Hola profesor</p>
+      <div class="col-md-3 text-end">
       </div>
-    </div>
+    </header>
   </div>
-</div>  <!-- End of Simple Article -->
-
-
- <script src="../js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
