--- a/pages/form.html
+++ b/pages/form.html
@@ -1,24 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
   <title>Formulario</title>
 </head>
+
 <body>
   <div class="container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-      <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-          <img src="../file/logo/cropped-logo_oficial_transparente.png" class="bi" width="70" height="60" aria-label="Logo majada" alt="">
-        </a>
-      </div>
-      <p>Hola profesor</p>
-      <div class="col-md-3 text-end">
-      </div>
-    </header>
+    <div class="container">
+      <header
+        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <div class="col-md-3 mb-2 mb-md-0">
+          <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+            <img src="../file/logo/cropped-logo_oficial_transparente.png" class="bi" width="70" height="60"
+              aria-label="Logo majada" alt="">
+          </a>
+        </div>
+        <p>Hola profesor</p>
+        <div class="col-md-3 text-end">
+        </div>
+      </header>
+    </div>
+    <div class="container">
+      <main class="">
+        <div id="formulario">
+          <form action="">
+            <div class="d-flex align-items-center p-3 my-3 bg-danger-subtle rounded shadow-sm">
+              <div class="input-group mb-3">
+                <span class="input-group-text">Turno</span>
+                <input type="text" class="form-control" placeholder="M/T" aria-label="M/T">
+                <span class="input-group-text">Curso y ciclo</span>
+                <input type="text" class="form-control" placeholder="Curso y ciclo" aria-label="Curso y ciclo">
+                <span class="input-group-text">Modulo</span>
+                <input type="text" class="form-control" placeholder="Modulo" aria-label="Modulo">
+                <span class="input-group-text">Horas</span>
+                <input type="text" class="form-control" placeholder="Horas" aria-label="Horas">
+                <span class="input-group-text">Dist. Semanal</span>
+                <input type="text" class="form-control" placeholder="Dist. Semanal" aria-label="Dist. Semanal">
+                <span class="input-group-text">Aula/Taller</span>
+                <input type="text" class="form-control" placeholder="Aula/Taller" aria-label="Aula/Taller">
+              </div>
+            </div>
+            <div class="d-flex align-items-center p-3 my-3 bg-danger-subtle rounded shadow-sm">
+              <div class="input-group mb-3">
+                <span class="input-group-text">Turno</span>
+                <input type="text" class="form-control" placeholder="M/T" aria-label="M/T">
+                <span class="input-group-text">Curso y ciclo</span>
+                <input type="text" class="form-control" placeholder="Curso y ciclo" aria-label="Curso y ciclo">
+                <span class="input-group-text">Modulo</span>
+                <input type="text" class="form-control" placeholder="Modulo" aria-label="Modulo">
+                <span class="input-group-text">Horas</span>
+                <input type="text" class="form-control" placeholder="Horas" aria-label="Horas">
+                <span class="input-group-text">Dist. Semanal</span>
+                <input type="text" class="form-control" placeholder="Dist. Semanal" aria-label="Dist. Semanal">
+                <span class="input-group-text">Aula/Taller</span>
+                <input type="text" class="form-control" placeholder="Aula/Taller" aria-label="Aula/Taller">
+              </div>
+            </div>
+            <div class="d-flex align-items-center p-3 my-3 bg-danger-subtle rounded shadow-sm">
+              <div class="input-group mb-3">
+                <span class="input-group-text">Turno</span>
+                <input type="text" class="form-control" placeholder="M/T" aria-label="M/T">
+                <span class="input-group-text">Curso y ciclo</span>
+                <input type="text" class="form-control" placeholder="Curso y ciclo" aria-label="Curso y ciclo">
+                <span class="input-group-text">Modulo</span>
+                <input type="text" class="form-control" placeholder="Modulo" aria-label="Modulo">
+                <span class="input-group-text">Horas</span>
+                <input type="text" class="form-control" placeholder="Horas" aria-label="Horas">
+                <span class="input-group-text">Dist. Semanal</span>
+                <input type="text" class="form-control" placeholder="Dist. Semanal" aria-label="Dist. Semanal">
+                <span class="input-group-text">Aula/Taller</span>
+                <input type="text" class="form-control" placeholder="Aula/Taller" aria-label="Aula/Taller">
+              </div>
+            </div>
+            <button type="button" class="btn btn-outline-success">Enviar</button>
+            <button type="button" class="btn btn-outline-primary">Añadir tabla</button>
+          </form>
+        </div>
+      </main>
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
