--- a/pages/form.html
+++ b/pages/form.html
@@ -30,15 +30,15 @@
         <div id="formulario">
           <form action="">
             <div class="d-flex align-items-center p-3 my-3 majada-b-naranja rounded shadow-sm">
-              <table class="table">
+              <table>
                 <thead>
                   <tr>
-                    <th scope="col"><span class="fw-bold input-group-text">Turno</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Turno</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Curso y ciclo</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Modulo</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Horas</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Aula/Taller</span></th>
+                    <th scope="col" class="tabla-width-5" ><span class="fw-bold input-group-text">Horas</span></th>
+                    <th scope="col" class="tabla-width-15"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Aula/Taller</span></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -64,15 +64,15 @@
               </table>
             </div>
             <div class="d-flex align-items-center p-3 my-3 majada-b-azul-claro rounded shadow-sm">
-              <table class="table">
+              <table>
                 <thead>
                   <tr>
-                    <th scope="col"><span class="fw-bold input-group-text">Turno</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Turno</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Curso y ciclo</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Modulo</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Horas</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Aula/Taller</span></th>
+                    <th scope="col" class="tabla-width-5" ><span class="fw-bold input-group-text">Horas</span></th>
+                    <th scope="col" class="tabla-width-15"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Aula/Taller</span></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -101,13 +101,12 @@
               <table>
                 <thead>
                   <tr>
-                    <th scope="col"><span class="fw-bold input-group-text">Turno</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Turno</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Curso y ciclo</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Modulo</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Horas</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Aula/Taller</span></th>
-                  </tr>
+                    <th scope="col" class="tabla-width-5" ><span class="fw-bold input-group-text">Horas</span></th>
+                    <th scope="col" class="tabla-width-15"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Aula/Taller</span></th>
                 </thead>
                 <tbody>
                   <tr>
@@ -135,12 +134,12 @@
               <table>
                 <thead>
                   <tr>
-                    <th scope="col"><span class="fw-bold input-group-text">Turno</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Turno</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Curso y ciclo</span></th>
                     <th scope="col"><span class="fw-bold input-group-text">Modulo</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Horas</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
-                    <th scope="col"><span class="fw-bold input-group-text">Aula/Taller</span></th>
+                    <th scope="col" class="tabla-width-5" ><span class="fw-bold input-group-text">Horas</span></th>
+                    <th scope="col" class="tabla-width-15"><span class="fw-bold input-group-text">Dist. Semanal</span></th>
+                    <th scope="col" class="tabla-width-5"><span class="fw-bold input-group-text">Aula/Taller</span></th>
                   </tr>
                 </thead>
                 <tbody>
