--- a/pages/form.html
+++ b/pages/form.html
@@ -26,6 +26,7 @@
       </header>
     </div>
     <div class="container">
+      <p class="text-center fs-4 fw-bold">Horas Totales: <span id="horastotales">0</span> </p>
       <main class="">
         <div id="formulario">
           <form action="">
@@ -51,7 +52,7 @@
                       <option value="2">DPL</option>
                       <option value="3">DEW</option>
                     </select></td>
-                    <td><input type="text" class="form-control" placeholder="Horas" aria-label="Horas"></td>
+                    <td><input type="number" class="form-control" placeholder="Horas" aria-label="Horas"></td>
                     <td><select class="form-select" aria-label="Default select example">
                       <option selected>Selecionar dist. Semanal</option>
                       <option value="1">1+2+2</option>
@@ -85,7 +86,7 @@
                       <option value="2">DPL</option>
                       <option value="3">DEW</option>
                     </select></td>
-                    <td><input type="text" class="form-control" placeholder="Horas" aria-label="Horas"></td>
+                    <td><input type="number" class="form-control" placeholder="Horas" aria-label="Horas"></td>
                     <td><select class="form-select" aria-label="Default select example">
                       <option selected>Selecionar dist. Semanal</option>
                       <option value="1">1+2+2</option>
@@ -118,7 +119,7 @@
                       <option value="2">DPL</option>
                       <option value="3">DEW</option>
                     </select></td>
-                    <td><input type="text" class="form-control" placeholder="Horas" aria-label="Horas"></td>
+                    <td><input type="number" class="form-control" placeholder="Horas" aria-label="Horas"></td>
                     <td><select class="form-select" aria-label="Default select example">
                       <option selected>Selecionar dist. Semanal</option>
                       <option value="1">1+2+2</option>
@@ -152,7 +153,7 @@
                       <option value="2">DPL</option>
                       <option value="3">DEW</option>
                     </select></td>
-                    <td><input type="text" class="form-control" placeholder="Horas" aria-label="Horas"></td>
+                    <td><input type="number" class="form-control" placeholder="Horas" aria-label="Horas"></td>
                     <td><select class="form-select" aria-label="Default select example">
                       <option selected>Selecionar dist. Semanal</option>
                       <option value="1">1+2+2</option>
@@ -186,7 +187,7 @@
                       <option value="2">DPL</option>
                       <option value="3">DEW</option>
                     </select></td>
-                    <td><input type="text" class="form-control" placeholder="Horas" aria-label="Horas"></td>
+                    <td><input type="number" class="form-control" placeholder="Horas" aria-label="Horas"></td>
                     <td><select class="form-select" aria-label="Default select example">
                       <option selected>Selecionar dist. Semanal</option>
                       <option value="1">1+2+2</option>
