--- a/pages/form.html
+++ b/pages/form.html
@@ -207,6 +207,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../js/horasTotales.js"></script>
 </body>
 
 </html>
